@@ -9,6 +9,7 @@ $use_permissions = TRUE;
 
 $permissions['edit_page']   = _('Edit page');
 $permissions['delete_page'] = _('Delete page');
+$permissions['featured']    = _('Set featured pages');
 
 $item_permissions = TRUE;
 
