@@ -11,6 +11,7 @@ function webpage_uninstall(&$content)
 {
     PHPWS_DB::dropTable('webpage_volume');
     PHPWS_DB::dropTable('webpage_page');
+    PHPWS_DB::dropTable('webpage_featured');
     $content[] = _('Web Page tables removed.');
     return TRUE;
 }
