@@ -8,6 +8,7 @@
 if (!isset($_REQUEST['module']) || $_REQUEST['module'] == 'webpage') {
     PHPWS_Core::initModClass('webpage', 'User.php');
     Webpage_User::showFrontPage();
+    Webpage_User::showFeatured();
  }
 
 ?>
