@@ -1,0 +1,14 @@
+<div class="webpage-featured">
+  <div class="box">
+    <div class="box-title"><h1>{FEATURED_TITLE}</h1></div>
+    <ul style="list-style-type : none">
+      <!-- BEGIN volume -->
+      <li class="padded">
+      <h2>{TITLE}</h2>
+      <div class="webpage-summary">{SUMMARY}</div>
+      <!-- BEGIN links --><p class="smaller">{LINKS}</p><!-- END links -->
+      </li>
+    <!-- END volume -->
+    </ul>
+  </div>
+</div>
