@@ -1,7 +1,7 @@
 <div class="webpage-header">
   <h1>{PAGE_TITLE}</h1>
-  <div>{SUMMARY}</div>
+  <div class="webpage-summary">{SUMMARY}</div>
 </div>
 <!-- BEGIN header-edit -->
-<div class="align-right">{EDIT_HEADER} | {RESTORE}</div>
+<div class="align-right">{EDIT_HEADER} | {RESTORE} | {FEATURE}</div>
 <!-- END header-edit -->
